--- a/src/style/index.less
+++ b/src/style/index.less
@@ -24,3 +24,11 @@
     height: 178px;
     display: block;
   }
+
+  // 富文本高度
+.container-publish .ql-editor{
+  height: 300px;
+}
+.container-publish .ql-toolbar.ql-snow{
+  padding: 0;
+}
